--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,36 @@ cython_debug/
 # Temp files
 *.tmp
 *~
+
+# Added by Task Master AI
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+dev-debug.log
+# Dependency directories
+node_modules/
+# Environment variables
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+# OS specific
+.DS_Store
+# Task files
+tasks.json
+tasks/ 
+
+.cursor
+.roo 
+.taskmaster
+.env
+.env.local
+.roomodes
+.windsurfrules
